test/Fail/Issue610.err
Issue610.agda:25.9-17: error: [DefinitionIsIrrelevant]
Identifier R.helper is declared irrelevant, so it cannot be used
here
when checking that the expression R.helper x x has type Set
